--- a/custom_components/ecovent_v2/translations/pl.json
+++ b/custom_components/ecovent_v2/translations/pl.json
@@ -11,9 +11,11 @@
         "step": {
             "user": {
                 "data": {
-                    "host": "Host",
+                    "ip_address": "Host",
                     "password": "Hasło",
-                    "username": "Użytkownik"
+                    "port": "Port",
+                    "device_id": "ID",
+                    "name": "Nazwa"
                 }
             }
         }
